# marty_lsp

./: CMakeLists.txt  basics.h  enums_generated.h  header.h  links.txt  lsp_enums.h  lsp_io.h  lsp_types.h  lsp_utils.h  marty_lsp.h  protocol_header.h  protocol_request.h  utils.h
_enums/: DocumentDiagnosticReportKind.txt  FailureHandlingKind.txt  FileOperationPatternKind.txt  FoldingRangeKind.txt  MarkupKind.txt  PositionEncodingKind.txt  ResourceOperationKind.txt  SemanticTokenModifiers.txt  TokenFormat.txt  TraceSetting.txt  WatchKind.txt  _generate_all.bat  enums.rsp  umba-enum-gen-options.txt
